# server.js
@@ -1,6 +1,7 @@
 import express from "express";
 import usuarioRouter from "./routes/usuarioRoute.js";
 import imovelRouter from "./routes/imovelRoute.js";
+import locarRouter from "./routes/locarRouter.js";
 import router from "./routes/authRoute.js";
 import swaggerUi from "swagger-ui-express";
 import { createRequire } from "module";
@@ -13,7 +14,8 @@ server.use(express.json());
 server.use("/docs", swaggerUi.serve, swaggerUi.setup(outputJson));
 server.use("/usuario", usuarioRouter);
 server.use("/imovel", imovelRouter);
-server.use("/token", router)
+server.use("/locar", locarRouter);
+server.use("/token", router);
 server.listen(5000, function () {
   console.log("backend em funcionamento!");
 });
